# sdam

./: README.md
gui_py/: .gitignore  Cargo.toml  main.py  util.py
gui_py/backend/: Cargo.toml  pyproject.toml
gui_py/backend/src/: lib.rs
gui_py/gui_py/: Cargo.toml  pyproject.toml
gui_py/sdam/: CHANGELOG  LICENSE  README.rst  pyproject.toml
gui_py/sdam/src/sdam/: __main__.py  app.py
gui_py/speechd/: README.md  pyproject.toml
gui_py/speechd/speechd/: client.py
gui_py/src/: lib.rs
sdam/: Cargo.toml
sdam/src/: lib.rs
tui/: Cargo.toml
tui/src/: main.rs
