[package]
name = "sdam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix="0.13"
anyhow="1.0.79"
derive-getters="0.3.0"
opus="0.3.0"
ringbuf="0.3.3"
serde={version="1.0", features=["derive"]}
rmp-serde="1.1"

[target.'cfg(unix)'.dependencies]

cpal="0.15.3"

[target.'cfg(windows)'.dependencies]

cpal={version="0.15.3", features=["asio"]}

